--- a/css/screen.css
+++ b/css/screen.css
@@ -1153,9 +1153,8 @@ body>footer #user_bio .inner, .post-footer #user_bio .inner {
     width: 62px;
     height: 62px;
     background-color: #fff;
-    background-size: contain;
+    background-size: cover;
     border: 1px solid rgba(33, 39, 45, 0.17);
-    border-radius: 50%;
     -webkit-border-radius: 60px;
     -moz-border-radius: 60px;
     -ms-border-radius: 60px;
@@ -1177,7 +1176,8 @@ body>footer #user_bio .inner, .post-footer #user_bio .inner {
 #blog_badge span {
     font-size: 1px;
     color: transparent;
-    background-size: contain;
+    border-radius: 50%;
+    background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
     position: absolute;
